# i3blocks_memory

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml  release.yml
src/: main.rs
